--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -366,3 +366,9 @@ blockquote
 
   & > :last-child
     margin-bottom: 0 !important
+
+#single_top
+  padding: 1.875rem 1.5rem 0
+  max-width: 1400px
+  width 100%
+  margin 0 auto
