提供配置项关闭h2顶部分隔线 close #83

--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -117,9 +117,10 @@ blockquote {
     padding-top: 0;
     margin-top: 0;
   h2
-    border-top: 1px dashed var(--anzhiyu-theme-op);
-    padding-top: 1.5rem;
-    margin-top: 1.5rem;
+    if hexo-config("h2Divider")
+      border-top: 1px dashed var(--anzhiyu-theme-op);
+      padding-top: 1.5rem;
+      margin-top: 1.5rem;
     .headerlink
       float: right;
       opacity: 0.08;
