--- a/layout/includes/additional-js.pug
+++ b/layout/includes/additional-js.pug
@@ -96,11 +96,14 @@ div
     - const ck = theme.LA.ck
     - const monitorID = theme.LA.LingQueMonitorID;
     script.
-      const loadScript = (url, charset = "UTF-8", crossorigin) => {
+      const loadScript = (url, charset = "UTF-8", crossorigin, id) => {
         return new Promise((resolve, reject) => {
           const script = document.createElement('script');
           script.src = url;
           script.async = true;
+          if (id) {
+            script.setAttribute("id", id);
+          }
           if (charset) {
             script.setAttribute("charset", charset);
           }
@@ -119,11 +122,11 @@ div
       };
 
       const scriptUrls = [
-        { url: 'https://sdk.51.la/js-sdk-pro.min.js', charset: 'UTF-8', id: 'LA_COLLECT' },
+        { url: 'https://sdk.51.la/js-sdk-pro.min.js', charset: 'UTF-8',crossorigin:false, id: 'LA_COLLECT' },
         { url: 'https://sdk.51.la/perf/js-sdk-perf.min.js', crossorigin: 'anonymous' }
       ];
 
-      Promise.all(scriptUrls.map(({ url, charset, crossorigin }) => loadScript(url, charset, crossorigin)))
+      Promise.all(scriptUrls.map(({ url, charset, crossorigin, id }) => loadScript(url, charset, crossorigin, id)))
         .then(() => {
           LA.init({ id: "#{ck}", ck: "#{ck}" });
           new LingQue.Monitor().init({ id: "#{monitorID}", sendSuspicious: true });
