--- a/layout/includes/mixins/post-ui.pug
+++ b/layout/includes/mixins/post-ui.pug
@@ -35,9 +35,9 @@ mixin postUI(posts)
           - unvisitedleft = "135px"
         a.unvisited-post(href=url_for(link) title=title style=`${unvisitedleft ? `left: ${unvisitedleft};` : ''}`) 未读
       if post_cover && theme.cover.index_enable
-        .post_cover(class=leftOrRight style='display: flex')
-          a(href=url_for(link) title=title)
-            img.post_bg(src=url_for(post_cover) onerror=`this.onerror=null;this.src='`+ url_for(theme.error_img.post_page) + `'` alt=title)
+        .post_cover(class=leftOrRight)
+          a(href=url_for(link) title=title style='display: flex')
+            img.post_bg(src=url_for(post_cover) onerror=`this.onerror=null;this.src='`+ url_for(theme.error_img.post_page) + `'` alt=title style='pointer-events: none')
       .recent-post-info(class=no_cover)
         if new_post
           span.newPost(style=`${(is_home() && (article.top || article.sticky > 0)) ? 'left: 80px': ''}`) 最新文章
