作者卡片描述默认颜色为白色

--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -66,6 +66,7 @@
       opacity: 0;
       transition: .3s;
       pointer-events: none
+      color: var(--anzhiyu-white);
 
     .banner-button-group .banner-button 
       padding: 20px 12px;
