改善ipad不再显示侧边栏

--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -371,6 +371,7 @@ ul.menus_item_child
   padding 0em 0.8em 0em 1em
   height 35px
   line-height 35px
+  transition: color 0s !important
 
 #nav .menus_items .menus_item
   padding 0 0.4rem
