--- a/source/css/_page/common.styl
+++ b/source/css/_page/common.styl
@@ -38,8 +38,9 @@
   padding: 1.875rem 1.5rem
   max-width: 1200px
   width: 100%
+  justify-content: center;
 
-  +maxWidth900()
+  +maxWidth1200()
     flex-direction: column
 
   +maxWidth768()
