--- a/source/css/_page/common.styl
+++ b/source/css/_page/common.styl
@@ -66,7 +66,7 @@
       background: var(--anzhiyu-background);
 
   & > div:first-child
-    width: 74%
+    width: calc(100% - 300px)
     transition: all .3s
 
     +maxWidth900()
