--- a/source/css/_page/flink.styl
+++ b/source/css/_page/flink.styl
@@ -336,18 +336,32 @@ body[data-type="link"]
   box-shadow: var(--anzhiyu-shadow-blue);
   color: var(--anzhiyu-white);
   z-index: 1;
-  border-radius: 12px 0 12px 0;
+  border-radius: 11px 0 12px 0;
   transition: 0.3s;
   font-size: 0.6rem;
   &.speed
     background: var(--anzhiyu-green);
     box-shadow: var(--anzhiyu-shadow-green);
   &.vip
-    background: -moz-linear-gradient(38deg, rgba(229, 176, 133, 1) 0%, rgba(212, 143, 22, 1) 100%);
-    background: -webkit-linear-gradient(38deg, rgba(229, 176, 133, 1) 0%, rgba(212, 143, 22, 1) 100%);
     background: linear-gradient(38deg, rgba(229, 176, 133, 1) 0%, rgba(212, 143, 22, 1) 100%);
     overflow: hidden;
     box-shadow: var(--anzhiyu-shadow-yellow);
+  i.light
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    width: 100px;
+    height: 50px;
+    background-image: -webkit-linear-gradient(0deg,rgba(255,255,255,0),rgba(255,255,255,.5),rgba(255,255,255,0))
+    animation: light_tag 4s both infinite;
+
+@keyframes light_tag
+  0%
+    transform: skewx(0);
+    left: -150px;
+  99%
+    transform: skewx(-25deg);
+    left: 50px;
 
 #article-container
   .telescopic-site-card-group
