--- a/source/css/_third-party/twikoo.styl
+++ b/source/css/_third-party/twikoo.styl
@@ -37,6 +37,8 @@ if hexo-config('comments.use') == 'Twikoo'
     background-color: var(--anzhiyu-card-bg);
 
   #twikoo 
+    .tk-admin
+      backdrop-filter: blur(5px);
     .tk-submit
       .actions
         .tk-send
