--- a/layout/includes/layout.pug
+++ b/layout/includes/layout.pug
@@ -62,6 +62,10 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
 
             footer#footer(style=footer_bg)
               !=partial('includes/footer', {}, {cache: true})
+            
+            if (theme.agreementPopup && theme.agreementPopup.enable && is_home_first_page())
+              !=partial('includes/agreement', {}, {cache: true})
+
         else
           include ./404.pug
 
@@ -78,3 +82,6 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
     if (theme.nav.clock)
       !=partial('includes/anzhiyu/clock', {}, {cache:true})
     include ./additional-js.pug
+
+    //- 弹窗通知
+    !=partial('includes/popup/index', {}, {cache: true})
