--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -285,3 +285,11 @@ if hexo-config('avatar.effect') == true
 
   100%
     transform: translateX(0)
+
+@keyframes sidebarItem
+  0%
+    transform: translateY(0);
+    opacity: 1;
+  100%
+    transform: translateY(20px);
+    opacity: 0;
