--- a/layout/includes/popup/index.pug
+++ b/layout/includes/popup/index.pug
@@ -1,6 +1,6 @@
 #popup-window
-  .cookies-window-title 通知
-  .cookies-window-content
-    .cookies-tip 你好呀
-    .cookies-link
+  .popup-window-title 通知
+  .popup-window-content
+    .popup-tip 你好呀
+    .popup-link
       i.anzhiyufont.anzhiyu-icon-arrow-circle-right
