--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -293,3 +293,39 @@ if hexo-config('avatar.effect') == true
   100%
     transform: translateY(20px);
     opacity: 0;
+
+@keyframes barrageIn {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes barrageOut {
+  0% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+}
+
+@keyframes toLeftFull
+  0%
+    transform: translateX(200%)
+
+  100%
+    transform: translateX(0)
+
+@keyframes toRightFull
+  0%
+    transform: translateX(0)
+
+  100%
+    transform: translateX(200%)
