--- a/layout/includes/layout.pug
+++ b/layout/includes/layout.pug
@@ -66,7 +66,7 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
             if (theme.agreementPopup && theme.agreementPopup.enable && is_home_first_page())
               - let agreementPopupUrl = theme.agreementPopup.url
               script(defer).
-                const hasShownPopup = sessionStorage.getItem('sessionNegotiatePopupShown');
+                var hasShownPopup = sessionStorage.getItem('sessionNegotiatePopupShown');
 
                 if (!hasShownPopup) {
                   setTimeout(() => {
