--- a/source/css/_third-party/twikoo.styl
+++ b/source/css/_third-party/twikoo.styl
@@ -85,6 +85,13 @@ if hexo-config('comments.use') == 'Twikoo'
     .tk-comment .tk-submit .tk-avatar, .tk-replies .tk-avatar
       height: 2.5rem !important;
       width: 2.5rem !important;
+    .tk-comment
+      pre
+        background: #272822;
+        padding: 1em;
+        margin: 0.5em 0;
+        overflow: auto;
+        border-radius: 0.3em;
     
     +maxWidth768()
       .tk-comments-container .tk-comment
