优化顶栏在顶部时的样式 修改最近文章文字描述

--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -538,6 +538,9 @@
               color: var(--anzhiyu-white) !important
               padding: .125rem 1.25rem;
               transform: scale(1) !important;
+              background: var(--anzhiyu-main)!important;
+              box-shadow: var(--anzhiyu-shadow-main);
+              transform: scale(1)!important;
 
   &.hide-menu
     #toggle-menu
