首页开往样式修复

--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -154,6 +154,9 @@
   #page-name,
   #nav #menus
     display: none
+#web_box .page #travellings_button:hover
+  &::after
+    background: var(--anzhiyu-main) !important;
 
 
 @media screen and (max-width: 768px)
