toc样式优化，移除数字

--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -374,7 +374,7 @@
         & > .toc-item > .toc-child
           margin-left: 10px
           padding-left: 10px
-          border-left: 1px solid var(--dark-grey)
+          // border-left: 1px solid var(--dark-grey)
 
       &:not(.is-expand)
         .toc-child
