--- a/source/css/_layout/sidebar.styl
+++ b/source/css/_layout/sidebar.styl
@@ -237,12 +237,15 @@ li.card-category-list-item {
   padding: 0.4rem 1rem !important;
 }
 
-/* 文章otc */
+/* 文章toc */
 #aside-content #card-toc .toc-content .toc-link.active {
   border-radius: var(--anzhiyu-border-radius);
 }
 #aside-content #card-toc .toc-content {
   overflow-y: auto;
+}
+#aside-content #card-toc span.toc-number {
+  display: none;
 }
 #aside-content #card-toc .toc-content .toc-link.active {
   line-height: 1.2;
