修复文章未读位置

--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -479,3 +479,6 @@ body[data-type="post"]
   #recent-posts > .recent-post-item&:has(.sticky-warp)&:has(.newPost) .unvisited-post
     left: 135px !important;
     top: 202px !important;
+  #recent-posts > .recent-post-item .unvisited-post
+    top: 202px;
+    left: 32px;
