--- a/source/css/_extra/home_top/top_group_banner.css
+++ b/source/css/_extra/home_top/top_group_banner.css
@@ -138,6 +138,7 @@
   margin-right: 0px;
   margin-bottom: 0.5rem;
   cursor: pointer;
+  animation: slide-in 0.6s 0.2s backwards;
 }
 .topGroup .recent-post-item:hover .recent-post-info .article-title {
   color: var(--anzhiyu-main);
