大量函数优化，重构js和css获取逻辑

--- a/layout/includes/head/config.pug
+++ b/layout/includes/head/config.pug
@@ -159,5 +159,6 @@ script.
     isPhotoFigcaption: !{theme.photofigcaption},
     islazyload: !{theme.lazyload.enable},
     isAnchor: !{theme.anchor},
-    shortcutKey: !{theme.shortcutKey.enable}
+    shortcutKey: !{theme.shortcutKey.enable},
+    autoDarkmode: !{theme.darkmode.enable && theme.darkmode.autoChangeMode === 1}
   }
