--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -290,6 +290,12 @@
 
       > .parent
         > a
+          &.expand
+            i
+              transform: rotate(-90deg)
+
+            & + .child
+              display: block
           .card-category-list
             &-name
               width: 70% !important
@@ -298,15 +304,12 @@
               width: calc(100% - 70% - 20px)
               text-align: right
 
-        i
-          float: right
-          margin-right: -.5em
-          padding: .5em
-          transition: transform .3s
-          transform: rotate(0)
-
-          &.expand
-            transform: rotate(-90deg)
+          i
+            float: right
+            margin-right: -.5em
+            padding: .5em
+            transition: transform .3s
+            transform: rotate(0)
 
         if hexo-config('aside.card_categories.expand') == false
           > .child
@@ -341,15 +344,17 @@
 
     +maxWidth1200()
       position: fixed
-      right: -100%
+      right: 55px
       bottom: 30px
       z-index: 100
       max-width: $toc-mobile-maxWidth
       max-height: calc(100% - 60px)
       width: $toc-mobile-width
-      opacity: 0
-      transition: initial
+      transition: transform .3s
+      transform: scale(0)
       transform-origin: right bottom
+      &.open
+        transform: scale(1)
 
     .toc-percentage
       display: none
@@ -364,6 +369,7 @@
       overflow-y: overlay
       margin: 0 -24px
       max-height: calc(100vh - 120px)
+      width: calc(100% + 48px)
 
       +maxWidth1200()
         max-height: calc(100vh - 140px)
