--- a/layout/includes/head/config.pug
+++ b/layout/includes/head/config.pug
@@ -41,14 +41,17 @@
   }
 
   let copyright = 'undefined';
-  if (theme.copy.enable && theme.copy.copyright.enable){
+  if (theme.copy.enable){
     copyright = JSON.stringify({
+      copy: theme.copy.enable,
+      copyrightEbable: theme.copy.copyright.enable,
       limitCount: theme.copy.copyright.limit_count,
       languages: {
         author: _p("copy_copyright.author") + ': ' + config.author,
         link: _p("copy_copyright.link") + ': ',
         source: _p("copy_copyright.source") + ': ' + config.title,
-        info: _p("copy_copyright.info")
+        info: _p("copy_copyright.info"),
+        copySuccess: _p("copy_copyright.copySuccess")
       }
     })
   }
